# path-tree

./: .env.example  .gitignore  INTEGRATION_GUIDE.md  README.md  diagrams.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
backend/: requirements.txt  seed_courses.py
backend/src/app/: main.py
backend/src/app/api/v1/: __init__.py  router.py
backend/src/app/core/: auth.py  database.py  dependencies.py  settings.py
backend/src/app/models/: __init__.py  account.py  completion.py  course.py  plan.py  program.py
backend/src/app/repository/: account.py  completion.py  plan.py  program.py
backend/src/app/routes/: auth.py  completions.py  plans.py  programs.py  term.py
backend/src/app/schemas/: account.py  completion.py  course.py  plan.py  program.py
backend/src/app/services/: completion.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/static/chunks/: [root-of-the-server]__0f0ba101._.css  src_20100c05._.js  (+4 more)
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/classes/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/program-of-study/: page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: program.ts
(+9 files in other folders)
