[project]
name = "course-planner-api"
version = "1.0.0"
description = "FastAPI backend for Course Planner (Postgres, SQLAlchemy async)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "sqlalchemy[asyncio]>=2.0.31",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",  # optional; not required if using create_all
]

[tool.uvicorn]
factory = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
